# BoomTapBot

./: pyproject.toml
bot/config/: __init__.py  config.py
bot/core/: headers.py  tapper.py
bot/utils/: launcher.py
