[tool.poetry]
name = "boomtapbot"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pydantic-settings = "^2.7.1"
aiohttp = "^3.11.11"
aiohttp-proxy = "^0.1.2"
better-proxy = "^1.3.1"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
